--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,13 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Vishnu Valsalan # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: "Tech Enthusiast and Data Scientist - One Algorithm at a Time" # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  I am a tech aficionado and data scientist dedicated to crafting tomorrow's solutions. 
+  I explore innovative tech trends, provide data-driven insights, and discuss the impact of technology on our lives.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -34,15 +35,15 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Vishnu Valsalan
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://twitter.com/vv2xpress # change to your twitter homepage
+    - https://github.com/space4VV # change to your github homepage
+    - www.linkedin.com/in/vishnuvalsalan
+
+
 
 # Site Verification Settings
 webmaster_verifications:
@@ -96,7 +97,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://media.licdn.com/dms/image/C4E03AQEgWWqUOfoXBg/profile-displayphoto-shrink_400_400/0/1657889132586?e=1721865600&v=beta&t=I2cn5MBdaPEK_ogebAxEFiP0G_kY7kq2pDCyUOPhGPo
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
