--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://space4VV.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: space4VV # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: vv2xpress # change to your twitter username
 
 social:
   # Change to your full name.
