--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -10,9 +10,9 @@
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+- type: linkedin
+  icon: 'fab fa-linkedin'   
+  url:  'https://www.linkedin.com/in/vishnuvalsalan/'                  
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
