--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -55,7 +55,7 @@ jobs:
           bundle exec htmlproofer _site \
             \-\-disable-external \
             \-\-ignore-urls "/^http:\/\/127\.0\.0\.1/,/^http:\/\/0\.0\.0\.0/,/^http:\/\/localhost/,/assets\/lib\/dayjs\/.*\.js/" \
-            \-\-ignore-missing-alt true
+            \-\-ignore-missing-alt
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
